@@ -19,6 +19,8 @@
 #include <vector>
 
 void new_animation_frame();
+int get_current_animation_tick();
+
 
 template<typename T>
 class void_value
